[FIXED] Overflow problem in sidebar

--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-  
+    overflow-y:hidden
     
 }
 .circle{
@@ -43,7 +43,7 @@ body{
     margin-left: 60px;
 }
 .imgfooter{
-    width: 35px;
+    width: 50px;
     float: left
 }
 .heart{
@@ -237,7 +237,7 @@ li{
     text-align:center;
 }
 .fondosidebar{
-    overflow-y: auto;
+    overflow-y: hidden;
 }
 .a{
     vertical-align: middle;
@@ -275,6 +275,9 @@ li{
 .timebar2:hover {
     background-color: green;
 }
+.text-decoration:hover{
+    text-decoration: underline;
+}
 
 /* MEDIA L */
 @media screen and (min-width:611px) and (max-width:991px){
@@ -283,9 +286,6 @@ li{
     }
     .row{
         flex-wrap: wrap;
-    }
-    .AAA{
-        font-size: ;
     }
 }
 
@@ -371,8 +371,10 @@ li{
     .AAA{
         font-size: 12px
     }
-   
-}
+  /*  .lista-hide{
+    display: none;
+   }
+} */
    
 
 
